@@ -61,6 +61,19 @@ static const struct defaultserver def[] =
 	{0,			"baltimore.md.us.afternet.org"},
 	{0,			"boston.afternet.org"},
 
+	{"Aitvaras",	0},
+#ifdef USE_IPV6
+	{0,			"irc6.ktu.lt"},
+#endif
+	{0,			"irc.delfi.lt"},
+	{0,			"irc.ktu.lt"},
+	{0,			"irc.le.lt"},
+	{0,			"irc.takas.lt"},
+	{0,			"irc.omnitel.net"},
+	{0,			"irc.5ci.net"},
+	{0,			"irc.interneka.lt"},
+	{0,			"irc.elekta.lt"},
+
 	{"AmigaNet",	0},
 	{0,			"linux.us.amiganet.org"},
 	{0,			"whiterose.us.amiganet.org"},
