@@ -24,6 +24,8 @@
  - Iterate in alpha order instead of op-alpha for nickcompletion
    (Gauss_Z88).
  - Fixed ChannelList crash on invalid regex match string.
+ - Added hide join/parts setting to gui (Jason Wies).
+ - Added Delete All button to ignore window (Mohammed Sameer).
  - 
  - 
 
